--- a/css/index.css
+++ b/css/index.css
@@ -1,162 +1,21 @@
 @charset "utf-8";
 /* new xpg index */
 
-* {
-    margin: 0;
-    padding: 0;
-    /* outline: 1px solid red; */
-}
 
-body,
-html {
-    background-color: black;
+
+/* 보이는 화면 기준 한 페이지를 잡아야할 때! */
+/* html, body {
     width: 100%;
     height: 100%;
-    /* overflow-x: hidden */
-}
-
-ul,
-li,
-ol {
-    list-style: none;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5 {
-    color: white;
-
-}
-
-a {
-    text-decoration: none;
-    color: white;
-}
-
-p {
-    color: white;
-}
-
-.clear::after {
-    content: "";
-    clear: both;
-    display: block;
-}
-
-/* reset */
-
-.inner {
-    width: 100%;
-    max-width: 1280px;
-    height: 100%;
-    margin: 0 auto;
-    padding: 0 20px;
-
-    /* outline: 2px solid lime; */
-}
-
-/*------------------- header --------------- */
-header {
-    width: 100%;
-    height: 100px;
-
-    position: fixed;
-    z-index: 9999;
-    top: 0;
-    left: 0;
-
-    background-color: rgba(0, 0, 0, 0.7);
-    /* outline: 2px solid red; */
-}
-
-.share-inner {
-    width: 100%;
-    max-width: 1620px;
-    margin: 0 auto;
-    /* outline: 2px solid blue; */
-
-    position: relative;
-}
-
-header .h-logo {}
-
-.h-logo>h1 {}
-
-.h-logo>h1>a {}
-
-.h-logo>h1>a>img {
-    float: left;
-    /* outline: 2px solid white; */
-    display: block;
-
-    padding: 30px 0;
-}
-
-header nav {
-    position: absolute;
-
-    left: 50%;
-    top: 0;
-
-    transform: translateX(-50%);
-}
-
-header nav .gnb {}
-
-header nav .gnb>li {
-    float: left;
-    position: relative;
-    /* lnb 기준 */
-
-    /* background-color: blueviolet; */
-}
-
-header nav .gnb>li~li {
-    margin-left: 80px;
-}
-
-header nav .gnb>li>a {
-    font-size: 20px;
-    line-height: 100px;
-    color: white;
-    font-weight: 400;
-    padding: 0 10px;
-}
-
-.gnb li .lnb {
-    width: 100px;
-    background-color: rgba(0, 0, 0, 0.7);
-    border: 1px solid white;
     overflow: hidden;
 
-    position: absolute;
+    outline: 2px solid red;
+} */
 
-    transform: translateY(-16px);
 
-    display: none;
-}
 
-.gnb li .lnb li {
-    padding: 10px 0;
-}
 
-.gnb li .lnb li a {
-    padding: 16px 12px;
-}
 
-header .h-icon {
-    float: right;
-    padding-top: 34.5px;
-}
-
-header .h-icon a {}
-
-header .h-icon a img {
-    float: left;
-    margin-left: 30px;
-}
 
 /* --------------- main --------------------- */
 main {
@@ -308,8 +167,8 @@ main .mouse-icon img {
     display: block;
 
     position: absolute;
-    left: -2px;
-    top: -2px;
+    left: -3px;
+    top: -3px;
 }
 
 .btn-box::after {
@@ -320,8 +179,8 @@ main .mouse-icon img {
     display: block;
 
     position: absolute;
-    right: -2px;
-    bottom: -2px;
+    right: -3px;
+    bottom: -3px;
 }
 
 .btn-box .btn::before {
@@ -332,8 +191,8 @@ main .mouse-icon img {
     display: block;
 
     position: absolute;
-    right: -2px;
-    top: -2px;
+    right: -3px;
+    top: -3px;
 }
 
 .btn-box .btn::after {
@@ -344,8 +203,8 @@ main .mouse-icon img {
     display: block;
 
     position: absolute;
-    left: -2px;
-    bottom: -2px;
+    left: -3px;
+    bottom: -3px;
 }
 
 .btn-grp .btn-box {
@@ -357,12 +216,39 @@ main .mouse-icon img {
     text-align: center;
 }
 
-
-
 .btn-grp .btn-box .btn a {
     font-size: 24px;
     font-weight: 600;
 }
+
+.btn-box::before,
+.btn-box::after,
+.btn-box .btn::before,
+.btn-box .btn::after {
+    z-index: 1;
+}
+
+.btn-box,
+.btn-box .btn,
+.btn-box .btn a {
+    position: relative;
+    z-index: 2;
+}
+
+
+.btn-box:hover {
+    transform: scaleX(1.05) scaleY(1.05);
+    transition: all 0.3s ease-in;
+    background-color: rgba(0, 187, 255, 0.6);
+}
+
+
+
+
+
+
+
+
 
 /* ------------------------- 텍스트 ------------------------------ */
 .t-content {
@@ -412,15 +298,19 @@ main .mouse-icon img {
 
 
 /* 자바스크립트 이미지  */
+
 .c-banner img {
-    display: block;
     position: absolute;
-
-    right: -50%;
+    right: 2%;
     top: 5%;
-
-    transition: all 0.6s ease-in;
+    transform: translateX(300px);
     opacity: 0;
+    transition: transform 0.6s ease-in, opacity 0.6s ease-in;
+}
+
+.c-banner img.active {
+    transform: translateX(0);
+    opacity: 1;
 }
 
 .c-inner {
@@ -434,13 +324,8 @@ main .mouse-icon img {
     position: relative;
 }
 
-.c-title {}
-
-/* 자바스크립트 텍스트 */
-.c-title .c-txtbox {
-    /* outline: 2px solid red; */
+.c-title {
     position: absolute;
-    display: block;
 
     left: -70%;
     top: 30%;
@@ -448,6 +333,10 @@ main .mouse-icon img {
     transition: all 0.6s ease-in;
     opacity: 0;
     transform: translateY(-30%);
+}
+
+/* 자바스크립트 텍스트 */
+.c-title .c-txtbox {
 
 }
 
@@ -458,13 +347,15 @@ main .mouse-icon img {
     padding-bottom: 5px;
 }
 
-.c-title .c-txtbox>p {
+.c-title .c-txtbox p {
     font-size: 20px;
     font-weight: 300;
     color: #e3e3e3;
     padding-bottom: 15px;
 }
 
+.c-title .c-txtboxtitle {}
+.c-title .c-txtboxtitle h3 {}
 .c-title .c-txtboxtitle p {
     font-size: 20px;
     font-weight: 300;
@@ -473,11 +364,10 @@ main .mouse-icon img {
 }
 
 
-
 /*------------------- button2 --------------- */
 .btn-grp2 {
-    width: 180px;
-    line-height: 55px;
+    
+    
 
     position: relative;
     left: 0;
@@ -488,9 +378,11 @@ main .mouse-icon img {
 
 .btn-box2 {
     border: 1px solid white;
-    width: 100%;
-    height: 100%;
+    
+    width: 180px;
+    line-height: 55px;
     box-sizing: border-box;
+    text-align: center;
 }
 
 /* 테두리 모서리 박스 */
@@ -502,8 +394,8 @@ main .mouse-icon img {
     display: block;
 
     position: absolute;
-    left: -2px;
-    top: -2px;
+    left: -3px;
+    top: -3px;
 }
 
 .btn-box2::after {
@@ -514,8 +406,8 @@ main .mouse-icon img {
     display: block;
 
     position: absolute;
-    right: -2px;
-    bottom: -2px;
+    right: -3px;
+    bottom: -3px;
 }
 
 .btn-box2 .btn2::before {
@@ -526,8 +418,8 @@ main .mouse-icon img {
     display: block;
 
     position: absolute;
-    right: -2px;
-    top: -2px;
+    right: -3px;
+    top: -3px;
 }
 
 .btn-box2 .btn2::after {
@@ -538,13 +430,13 @@ main .mouse-icon img {
     display: block;
 
     position: absolute;
-    left: -2px;
-    bottom: -2px;
+    left: -3px;
+    bottom: -3px;
 }
 
 .btn-grp2 .btn-box2 {
     background-image: url(../img/buttonimg.png);
-    background-color: rgba(60, 9, 67, 0.8);
+    background-color: rgba(60, 9, 67, 0.4);
 }
 
 .btn-grp2 .btn-box2 .btn2 {
@@ -554,6 +446,27 @@ main .mouse-icon img {
 .btn-grp2 .btn-box2 .btn2 a {
     font-size: 24px;
     font-weight: 600;
+}
+
+.btn-box2::before,
+.btn-box2::after,
+.btn-box2 .btn2::before,
+.btn-box2 .btn2::after {
+    z-index: 1;
+}
+
+.btn-box2,
+.btn-box2 .btn2,
+.btn-box2 .btn2 a {
+    position: relative;
+    z-index: 2;
+}
+
+
+.btn-box2:hover {
+    transform: scaleX(1.05) scaleY(1.05);
+    transition: all 0.3s ease-in;
+    background-color: rgba(60, 9, 67, 1);
 }
 
 /* ------------------------- g-content -------------------------------- */
@@ -612,6 +525,12 @@ main .mouse-icon img {
 .border-box img {
     display: block;
     width: 100%;
+    height: auto;
+    transition: transform 0.4s ease, opacity 0.4s ease;
+}
+
+.border-box:hover img {
+    transform: scale(1.1) translateY(-5px);
 }
 
 /* 테두리 모서리 사각형 */
@@ -667,6 +586,8 @@ main .mouse-icon img {
     bottom: -3px;
 }
 
+
+
 /*-------------------------- softwear --------------------------*/
 .s-content {
     margin-bottom: 150px;
@@ -691,21 +612,21 @@ main .mouse-icon img {
 /*-------------------------- softwear 테두리 --------------------------*/
 
 .s-content .wrapper2 {
-    width: calc(33.33% - 13.33px);
+    /* width: calc(33.33% - 13.33px); */
+    width: 32%;
 
     float: left;
     position: relative;
 
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
     /* 가상요소의 기준!!!!! */
-
-
 
     /* outline: 1px solid lime; */
 }
 
 .s-content .wrapper2~.wrapper2 {
-    margin-left: 20px;
+    /* margin-left: 20px; */
+    margin-left: 2%;
 }
 
 .border-box2 {
@@ -718,11 +639,6 @@ main .mouse-icon img {
     position: relative;
 
     /* 가상요소의 기준!! */
-}
-
-.border-box2 img {
-    width: 100%;
-    display: block;
 }
 
 /* 테두리 모서리 사각형 */
@@ -779,6 +695,34 @@ main .mouse-icon img {
     bottom: -3px;
 }
 
+.border-box2 a {
+    display: block;
+    overflow: hidden;
+}
+.border-box2 a img {
+    width: 100%;
+    display: block;
+
+    transition: all 0.6s;
+}
+.border-box2:hover img {
+    transform: scale(1.2);
+}
+.border-box2 .img-txt {
+    padding: 10px;
+   /*  display: none; */
+}
+.border-box2 .img-txt h3 {
+    font-size: 20px;
+}
+.border-box2 .img-txt p {
+    font-size: 18px;
+}
+
+/* .wrapper2:hover .img-txt {
+    display: block;
+} */
+
 /* --------------- new ------------------- */
 
 /* 자바스크립트 적용 . active */
@@ -796,43 +740,34 @@ main .mouse-icon img {
     position: relative;
 }
 
-.n-inner {
+
+.n-banner img {
+    display: block;
+    position: absolute;
+    right: 5%;
+    top: 50%;
+    transform: translateY(-50%);
+    opacity: 0;
+    transition: all 0.6s ease-in;
+}
+
+.n-banner img.active {
+    transform: translateY(-50%);
+    opacity: 1;
+}
+
+.n-banner .n-inner {
     width: 100%;
     max-width: 1280px;
     height: 100%;
     margin: 0 auto;
     padding: 0 20px;
+    /* outline: 2px solid plum; */
 
-    /* outline: 2px solid lime; */
     position: relative;
 }
 
-.n-container .n-banner>img {
-    position: absolute;
-
-    right: 0%;
-    top: 50%;
-    transform: translateY(-50%);
-
-    transition: all 0.6s ease-in;
-    opacity: 0;
-}
-
-.n-container .n-banner h2 {
-    font-size: 30px;
-    font-weight: 600;
-    text-shadow: 0px 0px 3px rgba(255, 255, 255, 0.7);
-    padding-bottom: 5px;
-}
-
-.n-container .n-banner p {
-    font-size: 20px;
-    font-weight: 300;
-    color: #e3e3e3;
-    padding-bottom: 15px;
-}
-
-.n-inner .n-titlebox {
+.n-banner .n-inner .n-titlebox {
     position: absolute;
 
     left: -60%;
@@ -844,11 +779,38 @@ main .mouse-icon img {
     transform: translateY(-30%);
 }
 
+.n-banner .n-inner .n-titlebox h2 {
+    font-size: 30px;
+    font-weight: 600;
+    text-shadow: 0px 0px 3px rgba(255, 255, 255, 0.7);
+    padding-bottom: 5px;
+}
+
+.n-banner .n-inner .n-titlebox p {
+    font-size: 20px;
+    font-weight: 300;
+    color: #e3e3e3;
+    padding-bottom: 15px;
+}
+
+
+
 /* -------------new banner -------------------- */
 
 .n-content {
     /* outline: 2px solid blue; */
     margin-bottom: 150px;
+}
+.n-content > div > div{ /* n-txtbox, n-txtbox2, n-txtbox3 */
+    width: 100%;
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 0 20px;
+    /* outline: 2px solid lime; */
+}
+
+.n-content > div > div h2 {
+    font-size: 28px;
 }
 
 /* ------------------------------------------newcontent1 */
@@ -1129,8 +1091,8 @@ main .mouse-icon img {
     display: block;
 
     position: absolute;
-    left: -2px;
-    top: -2px;
+    left: -3px;
+    top: -3px;
 }
 
 .btn-box3::after {
@@ -1141,8 +1103,8 @@ main .mouse-icon img {
     display: block;
 
     position: absolute;
-    right: -2px;
-    bottom: -2px;
+    right: -3px;
+    bottom: -3px;
 }
 
 .btn-box3 .btn3::before {
@@ -1153,8 +1115,8 @@ main .mouse-icon img {
     display: block;
 
     position: absolute;
-    right: -2px;
-    top: -2px;
+    right: -3px;
+    top: -3px;
 }
 
 .btn-box3 .btn3::after {
@@ -1165,8 +1127,8 @@ main .mouse-icon img {
     display: block;
 
     position: absolute;
-    left: -2px;
-    bottom: -2px;
+    left: -3px;
+    bottom: -3px;
 }
 
 .btn-grp3 .btn-box3 {
@@ -1183,6 +1145,27 @@ main .mouse-icon img {
 .btn-grp3 .btn-box3 .btn3 p a {
     font-size: 24px;
     font-weight: 600;
+}
+
+.btn-box3::before,
+.btn-box3::after,
+.btn-box3 .btn3::before,
+.btn-box3 .btn3::after {
+    z-index: 1;
+}
+
+.btn-box3,
+.btn-box3 .btn3,
+.btn-box3 .btn3 a {
+    position: relative;
+    z-index: 2;
+}
+
+
+.btn-box3:hover {
+    transform: scaleX(1.05) scaleY(1.05);
+    transition: all 0.3s ease-in;
+    background-color: rgba(255, 0, 28, 0.5);
 }
 
 /* ------------------------- footer */
