--- a/content/css/brand.css
+++ b/content/css/brand.css
@@ -1,313 +1,368 @@
 @charset "utf-8";
 
-* {
-    margin: 0;
-    padding: 0;
-    /* outline: 1px solid red; */
-}
+/* brand.css */
 
-body,
-html {
-    background-color: black;
+/* 보이는 화면 기준 설정 - 상단 intro를 위해! */
+html,
+body {
     width: 100%;
     height: 100%;
-    /* overflow-x: hidden */
 }
 
-ul,
-li,
-ol {
-    list-style: none;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5 {
-    color: white;
-
-}
-
-a {
-    text-decoration: none;
-    color: white;
-}
-
-p {
-    color: white;
-}
-
-.clear::after {
-    content: "";
-    clear: both;
-    display: block;
-}
-
-/* reset */
-
-.inner {
+/* --------------------------------------------main */
+main {
     width: 100%;
-    max-width: 1280px;
     height: 100%;
-    margin: 0 auto;
-    padding: 0 20px;
+    overflow: hidden;
 
-    /* outline: 2px solid lime; */
-}
+    background: url(../img/AboutXPG.gif) no-repeat center/cover;
 
-/*------------------- header --------------- */
-header {
-    width: 100%;
-    height: 100px;
-
-    position: fixed;
-    z-index: 9999;
-    top: 0;
-    left: 0;
-
-    background-color: rgba(0, 0, 0, 0.7);
-    /* outline: 2px solid red; */
-}
-
-.share-inner {
-    width: 100%;
-    max-width: 1620px;
-    margin: 0 auto;
-    /* outline: 2px solid blue; */
-
+    /* outline: 3px solid lime; */
     position: relative;
 }
 
-header .h-logo {}
-
-.h-logo>h1 {}
-
-.h-logo>h1>a {}
-
-.h-logo>h1>a>img {
-    float: left;
-    /* outline: 2px solid white; */
+main::before {
+    content: "";
     display: block;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
 
-    padding: 30px 0;
+    position: absolute;
+    left: 0;
+    top: 0;
 }
 
-header nav {
+/* main .m-intro {
+    width: 100%;
+    height: auto;
+}
+
+main .m-intro img {
+    opacity: 0.5;
+    width: 100%;
+} */
+
+main .m-box {
+    /* outline: 2px solid white; */
+    text-align: center;
     position: absolute;
 
     left: 50%;
-    top: 0;
+    top: 35%;
 
     transform: translateX(-50%);
 }
 
-header nav .gnb {}
-
-header nav .gnb>li {
-    float: left;
-    position: relative;
-    /* lnb 기준 */
-
-    /* background-color: blueviolet; */
+main .m-box h1 {
+    text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.7);
 }
 
-header nav .gnb>li~li {
-    margin-left: 80px;
+main .m-box h2 {
+    font-size: 48px;
+    text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.8);
 }
 
-header nav .gnb>li>a {
+main .m-box h1 img {
+    width: 30%;
+}
+
+main .m-box h2 {}
+
+main .m-box p {
     font-size: 20px;
-    line-height: 100px;
-    color: white;
-    font-weight: 400;
-    padding: 0 10px;
+    word-break: keep-all;
 }
 
-.gnb li .lnb {
-    width: 100px;
-    background-color: rgba(0, 0, 0, 0.7);
-    border: 1px solid white;
+/* ------------------------------- h-content */
+
+.h-inner {
+    width: 100%;
+    max-width: 1620px;
+    margin: 0 auto;
+    /* outline: 2px solid blue; */
+}
+
+.h-content {
+    padding-top: 100px;
+    padding-bottom: 150px;
+}
+
+.h-content img {
+    width: 100%;
+}
+
+.h-content .h-txtbox {
+    text-align: center;
+    transform: translateY(20%);
+}
+
+.h-content .h-txtbox h2 {
+    font-size: 50px;
+    font-size: 3.125rem;
+    margin-bottom: 20px;
+}
+
+.h-content .h-txtbox p {
+    font-size: 18px;
+    font-size: 1.125rem;
+    word-break: keep-all;
+}
+
+/* ---------------------------------------history */
+.h-container {
+    /* height: 100%; */
+    /* outline: 2px solid red; */
+
+    position: relative;
+    /* overflow: hidden; */
+}
+
+.h-container h1 {
+    margin-bottom: 60px;
+    font-size: 50px;
+    text-align: center;
+}
+
+/* 슬라이드!!!! */
+/* .viewer : 실제 보여지는 공간 */
+.h-container .viewer {
+    width: 100%;
+    max-width: 1620px;
+    margin: 100px auto;
     overflow: hidden;
 
+    position: relative; /* button의 기준!!! */
+
+    /* outline: 2px solid lime; */
+}
+
+.h-container .viewer .history-wrap {
+    width: 200%;
+}
+.h-container .viewer .history-wrap > div {
+    width: 50%;
+    float: left;
+
+    /* outline: 3px solid red; */
+}
+
+/* 버튼 */
+.h-container .viewer .btngrp {
     position: absolute;
+    bottom: 0;
+    right: 0;
 
-    transform: translateY(-16px);
+}
+.h-container .viewer button {
+    /* position: absolute;
+    right: 0;
+    bottom: 0; */
 
+    font-size: 20px;
+    padding: 10px;
+    background-color: black;
+    border-radius: 6px;
+    border-color: gray;
+    color: #fff;
+    
+}
+.h-container .viewer button:first-child {
+    margin-right: 10px;
+}
+
+
+.history {
+    width: 100%;
+    max-width: 1620px;
+}
+
+
+
+.history .h-history {
+    position: relative;
+    /* button의 기준! */
+}
+
+.history .h-history .h-con {
+    /* outline: 2px solid plum; */
+    /* height: 850px; */
+}
+
+
+.history .h-history .h-con .h-box {
+    /* outline: 2px solid white; */
+    /* display: inline-block; */
+    position: relative;
+
+    text-align: center;
+
+    opacity: 0;
+    width: 20%;
+    padding: 0 1.5%;
+    box-sizing: border-box;
+
+    float: left;
+
+
+    /* outline: 3px solid greenyellow; */
+}
+
+.history .h-history .h-con .h-box:nth-child(2) {
+    margin-top: 295px;
+}
+
+.h-box:nth-child(4) {
+    margin-top: 295px;
+}
+
+
+/* .history .h-history>div~div {
+    margin-left: 30px;
+} */
+
+.history .h-history .h-box .year-new {
+    width: 226px;
+    height: 226px;
+    padding-bottom: 68px;
+    margin: 0 auto;
+
+    background: url(../img/history-down.png) no-repeat left top/100%;
+
+    position: relative; /* h3의 기준! */
+    /* outline: 2px solid yellow; */
+}
+
+.history .h-history .h-box .year-new h3 {
+    /* position: absolute;
+    left: 50%;
+    top: 16%;
+    transform: translateX(-50%); */
+
+    position: absolute;
+    top: calc(50% - 34px);
+    /* top: 50%; */
+    transform: translateY(-50%);
+    width: 100%;
+    font-size: 30px;
+}
+
+.history .h-history .h-box .year-new2 {
+    width: 226px;
+    height: 226px;
+    padding-bottom: 68px;
+    margin: 0 auto;
+
+    background: url(../img/history-up.png) no-repeat left top/100%;
+
+    position: relative; /* h3의 기준! */
+    /* outline: 2px solid yellow; */
+}
+
+.history .h-history .h-box .year-new2 h3 {
+    /* position: absolute;
+    left: 50%;
+    top: 16%;
+    transform: translateX(-50%); */
+
+    position: absolute;
+    bottom: calc(50% - 34px);
+    /* top: 50%; */
+    transform: translateY(50%);
+    width: 100%;
+    font-size: 30px;
+}
+
+
+.history .h-history .h-box p {
+    width: 100%;
+    word-break: keep-all;
+}
+
+/* ----------------------------- h-adata */
+.h-adata {
+    text-align: center;
+    padding: 50px;
+    margin-bottom: 100px;
+    display: none;
+    /* js 초기설정 */
+}
+
+
+.h-adata h2 {
+
+    font-size: 48px;
+    text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.8);
+}
+
+.h-adata p {
+    font-size: 20px;
+    word-break: keep-all;
+    padding-bottom: 50px;
+}
+
+/* ------------------------------- h-eox */
+.h-exo {
+    text-align: center;
+    margin-top: 150px;
     display: none;
 }
 
-.gnb li .lnb li {
-    padding: 10px 0;
+.h-exo h2 {
+    font-size: 48px;
+    text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.8);
 }
 
-.gnb li .lnb li a {
-    padding: 16px 12px;
-}
-
-header .h-icon {
-    float: right;
-    padding-top: 34.5px;
-}
-
-header .h-icon a {}
-
-header .h-icon a img {
-    float: left;
-    margin-left: 30px;
-}
-
-
-
-body {
-    margin: 0;
-    padding: 0;
-    background-color: black;
-    color: white;
-    font-family: sans-serif;
-}
-
-section {
-    width: 100%;
-    text-align: center;
-    box-sizing: border-box;
-}
-
-/* 메인 비주얼 */
-.main-visual {
-    position: relative;
-
-    margin-top: 100px;
-}
-
-.main-visual img {
-    width: 100%;
-    height: auto;
-    display: block;
-
-    outline: 2px solid red;
-}
-
-.main-text {
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    width: 90%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-}
-
-.main-text img {
-    width: 120px;
-}
-
-.main-text h2 {
-    font-size: 28px;
-    margin: 20px 0 10px;
-}
-
-.main-text p {
-    font-size: 16px;
-}
-
-/* 익스트림 소개 */
-.extreme h2 {
-    font-size: 26px;
-    margin-bottom: 20px;
-}
-
-.extreme p {
-    width: 80%;
-    margin: 0 auto;
-    font-size: 16px;
-    line-height: 1.6;
-}
-
-/* 소개 영역 */
-.intro-by-adata h2 {
-    font-size: 24px;
-    margin-bottom: 20px;
-}
-
-.intro-by-adata p {
-    width: 70%;
-    margin: 0 auto 40px;
-    line-height: 1.6;
-}
-
-.intro-by-adata img {
-    width: 600px;
-    max-width: 90%;
-    display: block;
-    margin: 0 auto;
-}
-
-/* 연혁 */
-.history h2 {
-    font-size: 26px;
-    margin-bottom: 20px;
-}
-
-.history-banner img {
-    width: 80%;
-    max-width: 800px;
-    margin: 0 auto;
-    display: block;
-    border: 1px solid white;
-}
-
-.year-list {
-    margin: 30px auto 10px;
-    padding: 0;
-    list-style: none;
-    width: 90%;
-    text-align: center;
-}
-
-.year-list li {
-    display: inline-block;
-    margin: 0 10px;
-    font-size: 14px;
-    color: #ccc;
-    cursor: pointer;
-}
-
-.year-list li.active {
-    color: white;
-    font-weight: bold;
-    text-decoration: underline;
-}
-
-.year-desc {
-    margin-top: 30px;
-}
-
-.year-desc h3 {
+.h-exo p {
     font-size: 20px;
-    margin-bottom: 10px;
+    word-break: keep-all;
+    padding-bottom: 50px;
 }
 
-.year-desc p {
-    font-size: 14px;
-    line-height: 1.6;
+.h-exo img {
+    /* padding-bottom: 100px; */
+    width: 100%;
+    display: block;
 }
 
-/* Exoskeleton */
-.exoskeleton h2 {
-    font-size: 24px;
+/* ------------------------- footer */
+.f-container {}
+
+.f-container .f-txtbox {
+    margin-top: 20px;
+}
+
+.f-container .f-txtbox .f-txt {
+    /* outline: 2px solid red; */
+    float: left;
+}
+
+.f-container .f-txtbox .f-txt li {
+    margin-left: 30px;
+    padding: 10px;
+}
+
+.f-container .f-txtbox .f-txt li h2 {}
+
+.f-container .f-iconbox {
+    float: right;
+    margin-bottom: 30px;
+}
+
+.f-container .f-iconbox p {}
+
+.f-container .f-iconbox .f-icon {
+    /* outline: 2px solid white; */
     margin-bottom: 20px;
 }
 
-.exoskeleton p {
-    width: 75%;
-    margin: 0 auto 40px;
-    font-size: 16px;
-    line-height: 1.6;
+.f-container .f-iconbox .f-icon li {
+    float: left;
+    width: calc(20% - 20px);
 }
 
-.exoskeleton img {
-    width: 600px;
-    max-width: 90%;
+.f-container .f-iconbox .f-icon li a {}
+
+.f-container .f-iconbox .f-icon li a img {
     display: block;
-    margin: 0 auto;
 }
